cluster/apps/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  type: ClusterIP
  ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
      name: mqtt
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: websocket
  selector:
    app.kubernetes.io/name: mosquitto
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtt
  labels:
    app.kubernetes.io/name: mosquitto
  annotations:
    metallb.io/loadBalancerIPs: 10.1.0.23
spec:
  type: LoadBalancer
  ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
      name: mqtt
  selector:
    app.kubernetes.io/name: mosquitto
