cluster/apps/mosquitto/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mosquitto
  namespace: default
  annotations:
    gethomepage.dev/description: MQTT Message Broker
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: sh-mosquitto
    gethomepage.dev/name: Mosquitto
    gethomepage.dev/pod-selector: app.kubernetes.io/name=mosquitto
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - mqtt.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: mosquitto
          port: 9001
          weight: 1
